traversal.zigzag.traversalzigzag.TraversalZigZag.scala.error
Erreur de compilation :
TraversalZigZag:8: error: '(' expected but identifier found.
       else if get(Y)%2 == 0
               ^